Add one more collumn to viewer

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,7 +4,7 @@
 <table border="1" cellspacing="0">
 @for(quote <- quotesList){
         <tr>
-            <td>@quote.code</td><td>@quote.lastValue</td><td>@quote.lastUpdate</td>
+            <td>@quote.code</td><td>@quote.lastValue</td><td>@quote.lastUpdate</td><td>@quote.variation</td>
         </tr>
 }
 </table>
