--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,3 +1,4 @@
+@import play.Play
 @(title: String)(content: Html)
 
 <!DOCTYPE html>
@@ -5,7 +6,7 @@
 <html>
     <head>
         <title>@title</title>
-        <meta http-equiv="refresh" content="30">
+        <meta http-equiv="refresh" content="@Play.application().configuration().getString("index.refresh.interval")">
         <link rel="stylesheet" media="screen" type="text/css" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script></script>
